--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,33 +54,35 @@ dependencies {
     implementation 'com.alibaba.alipay:alipaySingle:20160825@jar'
 
     //登陆
-    implementation 'com.ali.auth.sdk:alibabauth_core:1.4.3@jar'
-    implementation 'com.ali.auth.sdk:alibabauth_ui:1.4.3@aar'
-    implementation 'com.ali.auth.sdk:alibabauth_ext:1.4.3@jar'
+    implementation 'com.ali.auth.sdk:alibabauth_core:2.0.0.6@aar'
+    implementation 'com.ali.auth.sdk:alibabauth_ui:2.0.0.6@aar'
+    implementation 'com.ali.auth.sdk:alibabauth_ext:2.0.0.6@aar'
+
     //【可选】仅供特殊合作伙伴使用
     implementation 'com.ali.auth.sdk:alibabauth_accountlink:1.1.4@jar'
 
+
     //安全基础
-    implementation 'com.taobao.android:securityguardaar3:5.1.81@aar'
+    implementation 'com.taobao.android:securityguardaar3:5.4.171@aar'
     //【可选】安全高级，如使用了发放红包、优惠券高级功能，则必须引入
-    implementation 'com.taobao.android:securitybodyaar3:5.1.25@aar'
+    implementation 'com.taobao.android:securitybodyaar3:5.4.99@aar'
 
     //Mtop网关
-    implementation 'com.taobao.android:mtopsdk_allinone_open:1.2.2.4@jar'
+    implementation 'com.taobao.android:mtopsdk_allinone_open:3.1.2.5@jar'
 
     //applink
-    implementation 'com.alibaba.sdk.android:alibc_link_partner:1.1.0.6'
+    implementation 'com.alibaba.sdk.android:alibc_link_partner:4.1.11@aar'
+
 
     //UT
-    implementation 'com.taobao.android:utdid4all:1.1.5@jar'
-    implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4_for_bc@jar'
-
+    implementation 'com.taobao.android:utdid4all:1.1.5.3_proguard'
+    implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc'
 
     //联盟SDK
     implementation 'com.alimama.tunion.sdk:tuniontradesdk:0.3.2@aar'
 
     //电商SDK
-    implementation 'com.alibaba.sdk.android:alibc_trade_common:3.1.1.210'
-    implementation 'com.alibaba.sdk.android:alibc_trade_biz:3.1.1.210'
-    implementation 'com.alibaba.sdk.android:alibc_trade_sdk:3.1.1.210'
+    implementation 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.2@aar'
+    implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.2@aar'
+    implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.2@aar'
 }
